<resources>
    <string name="app_name">Portal</string>
    <string name="app_name_bem_vindo">Welcome</string>


    <!-- Tela login                                               -->
    <string name="login_sp_faculdade">Select your college</string>
    <string name="login_btn_senha_esqueceu">Forgot</string>
    <string name="login_tv_matricula">Registration</string>
    <string name="login_tv_pass">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_primeiro">First Access</string>


    <!-- Tela cadastro aluno                                               -->
    <string name="cad_tv_aluno_nome_faculdade">College</string>
    <string name="cad_tv_aluno_nome_aluno">Student</string>
    <string name="cad_tv_aluno_nome_curso">Cource</string>
    <string name="cad_tv_aluno_primeiro_nome">First Name</string>
    <string name="cad_tv_aluno_Email">E-Mail</string>
    <string name="cad_tv_aluno_seleciona_Curso">Course</string>
    <string name="cad_tv_aluno_seleciona_Discipina">Discipline</string>
    <string name="cad_tv_aluno_senha">Password</string>
    <string name="cad_tv_aluno_senha_confirma">Repeat Password</string>

    <string name="cad_spinner_seleciona_Cursos">Select your course</string>

    <string name="cad_btn_aluno_Discipinas">Select your discipline</string>
    <string name="cad_btn_aluno_save">Save</string>
    <string name="cad_btn_aluno_Cancel">Cancel</string>


    <!-- Tela cadastro Professor                                     -->
    <string name="cad_tv_profesor_nome_faculdade">College</string>
    <string name="cad_tv_profesor_nome">Teacher</string>
    <string name="cad_tv_professor_primeiro_nome">First Name</string>

    <string name="cad_tv_professor_nome_cursos">Cource</string>
    <string name="cad_tv_professor_seleciona_Discipina">Discipline</string>

    <string name="cad_tv_professor_Email">E-Mail</string>
    <string name="cad_tv_professor_senha">Password</string>
    <string name="cad_tv_professor_senha_confirma">Repeat Password</string>

    <string name="cad_btn_professor_Discipinas">Select your discipline</string>
    <string name="cad_btn_professor_save">Save</string>
    <string name="cad_btn_professor_Cancel">Cancel</string>

    <string name="cad_tv_professor_nome_curso">Name Course</string>


    <string-array name="tabs_cad_professor">
        <item>Teacher</item>
        <item>Course</item>
        <item>Discipline</item>
    </string-array>

    <!-- Tela Dias da semana                                     -->

    <string name="horario_selecione_disciplina">Select your discipline</string>

    <string name="dia_tv_domingo">Sunday</string>
    <string name="dia_tv_segunda">Monday</string>
    <string name="dia_tv_terca">Tuesday</string>
    <string name="dia_tv_quarta">Wednesday</string>
    <string name="dia_tv_quinta">Thursday</string>
    <string name="dia_tv_sexta">Friday</string>
    <string name="dia_tv_sabado">Saturday</string>


    <!-- Tela cadastro disciplina                                     -->

    <string name="disciplina_periodo">Periodo</string>
    <string name="disciplina_nome_disciplina">Name discipline</string>

    <string name="cad_btn_disciplina_save">Save</string>
    <string name="cad_btn_disciplina_Cancel">Cancel</string>

    <string-array name="periodos_disciplinas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>19</item>
        <item>20</item>
    </string-array>


    <!-- Tela Main                                     -->

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- menssagens -->
    <string name="message_valida_faculdade">Invalid college</string>
    <string name="message_seleciona_disciplina">Course not selected</string>
    <string name="message_valida_matricula">Not informed registration</string>
    <string name="message_valida_nome">Invalid name</string>
    <string name="message_valida_email">Invalid email</string>
    <string name="message_valida_curso">Invalid course</string>
    <string name="message_valida_senha">Not informed password</string>
    <string name="message_alerta_webservice">Webservice not available</string>
    <string name="message_alerta_curso_exclui">Course excluded</string>
    <string name="message_valida_disciplina">Invalid Discipline</string>
    <string name="message_alerta_disciplina_exclui">Discipline excluded</string>

    <string name="message_alerta_disciplina_inserir">Insert</string>
    <string name="message_alerta_disciplina_atualizar">Update</string>
    <string name="message_alerta_disciplina_remover">Delete</string>
    <string name="message_alerta_disciplina_seleciona_uma">Select only one discipline</string>
    <string name="message_alerta_disciplina_nao_auteracao">Did not make changes</string>

    <string name="message_alerta_disciplina_Saving">Saving...</string>
    <string name="message_alerta_disciplina_Removing">Removing...</string>
    <string name="message_alerta_disciplina_Updating">Updating...</string>

    <string name="message_alerta_disciplina_Saving_successfully">Discipline saved successfully</string>
    <string name="message_alerta_disciplina_Removing_Successfully">Discipline removing Successfully</string>
    <string name="message_alerta_disciplina_Updating_Successfully">Discipline updated Successfully</string>





    <string name="message_alerta_disciplina_cadastrada">Course has no discipline</string>
    <string name="message_valida_password">Invalid Password</string>
    <string name="title_activity_maps">Map</string>


</resources>
