<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Portal Academico"
            android:textColor="@color/colorPrimaryTextWhite"
            android:textAllCaps="true"
            android:textSize="50dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="170dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/linearLayout">

            <TextView
                android:text="@string/login_tv_matricula"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView" />
            <EditText
                android:id="@+id/login_Id_EdtTxt_Matricula"
                android:backgroundTint="@color/colorWhite"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/login_tv_pass"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2" />

            <EditText
                android:id="@+id/login_Id_EdtTxt_Senha"
                android:backgroundTint="@color/colorWhite"
                android:maxLength="50"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_alignLeft="@+id/linearLayout"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_btn_login"
                    android:text="@string/login_btn_login"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/login_btn_primeiroAcesso"
                    android:text="@string/login_btn_primeiro"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@color/colorBlack"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>



</ScrollView>



